# scout

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AIA_EMM_Convert_Rev_Final.txt  CONTRIBUTING.md  Com_Cdiv_Czone_ConvertTable_Final.txt  Com_Cdiv_EMM_ConvertTable_Final.txt  Com_Cdiv_EMM_ConvertTable_Rev_Final.txt  Com_Cdiv_EMM_Elec_ConvertTable_Final.txt  Com_Cdiv_EMM_NG_ConvertTable_Final.txt  Com_TLoads_Final.txt  Cost_S-S_CO2.txt  DDL.sql  EMF_README.md  LICENSE.md  MANIFEST.in  NElec_Cdiv_EMM_Convert_Final.txt  NElec_Cdiv_EMM_Convert_Rev_Final.txt  README.md  Res_Cdiv_Czone_ConvertTable_Final.txt  Res_Cdiv_EMM_ConvertTable_Final.txt  Res_Cdiv_EMM_ConvertTable_Rev_Final.txt  Res_Cdiv_EMM_Elec_ConvertTable_Rev_Final.txt  Res_Cdiv_EMM_NG_ConvertTable_Final.txt  Res_TLoads_Final.txt  baseline_calc_test_2.py  baseline_calc_test_2a.py  baseline_calc_test_2b.py  baseline_calculator_AMC.py  baseline_calculator_code.py  baseline_calculator_code_2.py  baseline_calculator_code_2a.py  baseline_calculator_code_2b.py  baseline_calculator_test.py  calculator-2015.html  calculator.html  cambium_updater.py  com_mseg.py  (+67 more)
.github/: CI_CD.md  constraints.txt
.ipynb_checkpoints/: interactive_test_script-checkpoint.ipynb  testing_baseline_calculator-checkpoint.ipynb
AEO2025/: microsegments.json
batch/: brk.yml  high.yml  ineff.yml  mid.yml  stated.yml
css/: styles.css
data/: site_source_co2_conversions.json  ss_co2_conversions.json
docs/: Gruntfile.js  Makefile  analysis_approach.rst  conf.py  config_readable.yml  ecm_reference.rst  ecm_schema.rst  eia_update.rst  generate_readable_cfg.py  index.rst  installation_guide.rst  maintenance.rst  make.bat  overview.rst  package.json  quick_start.rst  quick_start_guide.rst  thermal_load_components.rst  tutorials.rst  tutorials_web.rst
ecm_definitions/: (C) 90.1 Lighting.json  (C) 90.1 Plug Loads.json  (C) 90.1-2022 Walls & Air Sealing.json  (C) 90.1-2022 Windows.json  (C) BTO RDO Air Sealing (Exist).json  (C) BTO RDO Roofs.json  (C) BTO RDO Walls.json  (C) BTO RDO Windows.json  (C) Best Gas WH.json  (C) Best HP FS (NG Boiler).json  (+861 more)
(+2583 files in other folders)
