[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["scout", "scout.*"]
namespaces = false

[project]
name = "scout"
readme = "README.md"
version = "0.9"
authors = [
  {email = "chioke.harris@nrel.gov"},
  {name = "Chioke Harris"},
  {email = "jared.langevin@lbl.gov"},
  {name = "Jared Langevin"}
]
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
dependencies = [
    "pandas >= 2.0",
    "numpy >= 1.16",
    "scipy",
    "requests",
    "numpy-financial",
    "xlsxwriter",
    "matplotlib",
    "backoff"
]